--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
+<app-navbar></app-navbar>
 <app-header></app-header>
 <app-historia></app-historia>
 <app-detalles></app-detalles>
 <app-galeria></app-galeria>
 <app-rsvp></app-rsvp>
+
