--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,17 @@
 <app-navbar></app-navbar>
+
+<div id="header">
 <app-header></app-header>
+</div>
+<div id="historia">
 <app-historia></app-historia>
+</div>
+<div id="detalles">
 <app-detalles></app-detalles>
+</div>
+<div id="galeria">
 <app-galeria></app-galeria>
+</div>
 <app-rsvp></app-rsvp>
+
 
