--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,14 @@
-<header class="bg-cover bg-center h-screen" style="background-image: url('assets/boda.jpg');">
-    <div class="flex items-center justify-center h-full bg-black bg-opacity-50">
-      <h1 class="text-white text-5xl font-bold">Bienvenidos a nuestra boda</h1>
+<!-- Jumbotron -->
+<div
+  class="relative overflow-hidden rounded-lg bg-cover bg-no-repeat p-12 text-center"
+  style="background-image: url('/boda.png'); height: 100vh; background-size: cover; background-position: center;">
+  <div class="absolute bottom-0 left-0 right-0 top-0 h-full w-full overflow-hidden bg-fixed">
+    <div class="flex h-full items-center justify-center">
+      <div class="text-white">
+        <h2 class="mb-4 text-4xl font-semibold">Raquel y Jose</h2>
+        <app-countdown></app-countdown> 
+      </div>
     </div>
-  </header>
+  </div>
+</div>
+<!-- Jumbotron -->
