--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-gray-800 sticky top-0">
+<nav class="bg-gray-800 sticky top-0 z-50 text-white px-4 py-3">
   <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
     <div class="flex h-16 items-center justify-center">
       <div class="flex space-x-4 items-center">
