--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,23 @@
-<app-navbar></app-navbar>
+<!-- Header con imagen de fondo -->
+<div
+  class="relative h-screen w-full bg-cover bg-no-repeat bg-center text-center text-white"
+  style="background-image: url('/boda.png'); background-position: top center;">
+  
+  <!-- Capa oscura con contenido -->
+  <div class="absolute inset-0 bg-black/40 p-4 md:p-12 flex flex-col">
+    
+    <!-- Navbar arriba -->
+    <header class="w-full mb-6">
+      <app-navbar></app-navbar>
+    </header>
 
-
-<div id="header">
-<app-header></app-header>
+    <!-- Contenido centrado -->
+    <div class="flex-grow flex items-center justify-center">
+      <div>
+        <h1 class="text-7xl font-normal tracking-wide" style="font-family: 'Playfair Display', serif;">Raquel y Jose</h1>
+        <app-countdown></app-countdown>
+      </div>
+    </div>
+    
+  </div>
 </div>
-<div id="historia">
-<app-historia></app-historia>
-</div>
-<div id="detalles">
-<app-detalles></app-detalles>
-</div>
-<div id="galeria">
-<app-galeria></app-galeria>
-</div>
-
-
-
-
