--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,12 +17,10 @@
             <div class="text-center flex flex-col justify-center items-center">
                 <h1 class="text-7xl font-normal tracking-wide" style="font-family: 'Playfair Display', serif;">Raquel y
                     Jose</h1>
+                    <h1 class="text-5xl font-normal tracking-wide" style="font-family: 'Playfair Display', serif;">01/11/2025</h1>
                 <div class="mt-10">
                     <app-countdown></app-countdown>
                 </div>
-                <button (click)="goToSection(1)"
-                    class="mt-10 px-6 py-3 bg-white text-black rounded-full shadow hover:bg-gray-200 transition">Ver
-                    más</button>
             </div>
         </section>
 
