--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,13 @@
-<nav class="sticky top-0 z-50 text-white px-4 py-3">
-  <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
+<nav class="sticky top-0 z-50 text-white px-6 py-3">
+  <div class="mx-auto max-w-7x1 px-2 sm:px-6 lg:px-8">
     <div class="flex h-16 items-center justify-center">
       <div class="flex space-x-4 items-center">
-        <button (click)="onNavigateToSection(1)" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">
+        <!-- Botón con texto más grande -->
+        <button (click)="onNavigateToSection(1)" class="rounded-md px-4 py-3 text-2xl font-medium text-gray-300  hover:text-white">
           Detalles del evento
         </button>
         
-        <a href="#galeria" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Galería</a>
+        <a href="#galeria" class="rounded-md px-4 py-3 text-xl font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Confirma tu asistencia</a>
       </div>
     </div>
   </div>
