--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="relative w-screen h-screen overflow-hidden">
     <!-- Imagen de fondo y Navbar, siempre visibles -->
     <section class="relative h-screen w-full bg-cover bg-no-repeat bg-center text-center text-white"
-        style="background-image: url('/boda.png'); background-position: top center;">
+        style="background-image: url('/boda2.jpg'); background-position: top center;">
         <div class="absolute inset-0 bg-black/40 flex flex-col p-6 md:p-12">
             <header class="w-full mb-6">
                 <app-navbar (navigateToSection)="goToSection($event)"></app-navbar>
