--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,15 +1,15 @@
-<nav class="sticky top-0 z-50 text-white  px-4 sm:px-6 lg:px-8 shadow">
+<nav class="sticky top-0 z-50 text-white bg-black px-4 sm:px-6 lg:px-8 shadow">
   <div class="max-w-7xl mx-auto">
-    <div class="flex flex-wrap justify-center items-center h-16 gap-4">
+    <div class="flex flex-nowrap justify-center items-center h-16 gap-2 sm:gap-4 overflow-x-auto whitespace-nowrap">
       
       <!-- Botón 1 -->
-      <button (click)="onNavigateToSection(1)" class="relative group px-4 py-2 text-lg sm:text-2xl font-medium">
+      <button (click)="onNavigateToSection(1)" class="relative group px-2 sm:px-4 py-2 text-sm sm:text-xl font-medium">
         Detalles del evento
         <span class="absolute bottom-0 left-0 w-0 h-[2px] bg-white transition-all duration-300 group-hover:w-full"></span>
       </button>
 
       <!-- Botón 2 -->
-      <a href="#galeria" class="relative group px-4 py-2 text-base sm:text-xl font-medium">
+      <a href="#galeria" class="relative group px-2 sm:px-4 py-2 text-sm sm:text-xl font-medium">
         Confirma tu asistencia
         <span class="absolute bottom-0 left-0 w-0 h-[2px] bg-white transition-all duration-300 group-hover:w-full"></span>
       </a>
