--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="sticky top-0 z-50 text-white bg-black px-4 sm:px-6 lg:px-8 shadow">
+<nav class="sticky top-0 z-50 text-white px-4 sm:px-6 lg:px-8 shadow">
   <div class="max-w-7xl mx-auto">
     <div class="flex flex-nowrap justify-center items-center h-16 gap-2 sm:gap-4 overflow-x-auto whitespace-nowrap">
       
