--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="page-wrapper min-h-screen flex flex-col">
 
   <!-- Navbar sticky arriba, fuera de las secciones -->
-  <div class="sticky top-0 z-50 bg-black bg-opacity-80 text-white shadow">
+  <div class="sticky flex-grow z-50 bg-black bg-opacity-80 text-white shadow">
     <app-navbar></app-navbar>
   </div>
 
@@ -26,7 +26,7 @@
       </div>
     </section>
 
-    <section id="detalles" class="bg-white py-12 px-6 text-gray-900">
+    <section id="detalles" class="py-12 px-6 text-gray-900 bg-sky-50">
       <div class="max-w-3xl mx-auto">
         <h2 class="text-4xl font-semibold text-center mb-12">Detalles del Evento</h2>
         <div class="relative border-l-4 border-gray-700 pl-6">
@@ -48,8 +48,17 @@
       </div>
     </section>
 
+      <section id="galeria" class="py-12 px-6 text-gray-900 bg-sky-50" >
+      <div class="max-w-5xl mx-auto text-center mb-8">
+        <h2 class="text-4xl font-semibold">Galería de Fotos</h2>
+        <p class="text-gray-600 mt-2"></p>
+      </div>
+      <div class="max-w-4xl mx-auto">
+        <app-galeria></app-galeria>
+      </div>
+    </section>
     
-    <section id="faq" class="min-h-screen w-full bg-gray-50 text-gray-900 px-6 py-12">
+    <section id="faq" class="min-h-screen w-full bg-sky-50 text-gray-900 px-6 py-12" >
       <div class="max-w-4xl mx-auto">
         <h2 class="text-4xl font-semibold mb-10 text-center">Preguntas Frecuentes (FAQ)</h2>
 
