--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div class="page-wrapper min-h-screen flex flex-col">
-
-  <!-- Navbar sticky arriba, fuera de las secciones -->
   <div class="sticky flex-grow z-50 bg-black bg-opacity-80 text-white shadow">
     <app-navbar></app-navbar>
   </div>
+<div class="page-wrapper min-h-screen flex flex-col">
+  <!-- Navbar sticky arriba, fuera de las secciones -->
+
 
   <!-- Contenido de la página, flex-grow para ocupar espacio -->
   <main class="flex-grow">
@@ -48,10 +48,10 @@
       </div>
     </section>
 
-      <section id="galeria" class="py-12 px-6 text-gray-900 bg-sky-50" >
+    <section id="galeria" class="bg-gray-100 py-12 px-6 text-gray-900">
       <div class="max-w-5xl mx-auto text-center mb-8">
         <h2 class="text-4xl font-semibold">Galería de Fotos</h2>
-        <p class="text-gray-600 mt-2"></p>
+        <p class="text-gray-600 mt-2">Un vistazo a nuestros mejores momentos juntos</p>
       </div>
       <div class="max-w-4xl mx-auto">
         <app-galeria></app-galeria>
