--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
-  <div class="sticky flex-grow z-50 bg-black bg-opacity-80 text-white shadow">
+  <div class="page-wrapper min-h-screen flex flex-col">
+
+  <!-- Navbar sticky arriba -->
+  <div class="sticky top-0 z-50 bg-black bg-opacity-80 text-white shadow">
     <app-navbar></app-navbar>
   </div>
-<div class="page-wrapper min-h-screen flex flex-col">
-  <!-- Navbar sticky arriba, fuera de las secciones -->
 
-
-  <!-- Contenido de la página, flex-grow para ocupar espacio -->
   <main class="flex-grow">
 
     <section id="inicio" 
