--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,10 @@
   opacity: 0;
   pointer-events: none; /* Desactiva la interacción con las secciones invisibles */
 }
+
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  width: 100%;
+}
