--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -26,7 +26,7 @@
         Preguntas frecuentes
       </button>
 
-      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfGDJCnZ5xwrW7zxpKDtOAKu2Y175nUkS9M6qXR98O_mCpJlg/viewform?usp=sharing&ouid=103457335119933057856"
          class="px-4 py-2 text-sm sm:text-xl font-medium whitespace-nowrap inline-block"
          target="_blank" rel="noopener noreferrer">
         Confirma tu asistencia
