--- a/src/app/galeria/galeria.component.html
+++ b/src/app/galeria/galeria.component.html
@@ -14,20 +14,20 @@
       />
 
       <!-- Flecha izquierda -->
-      <button
-        (click)="prevImage()"
-        class="absolute left-4 top-1/2 -translate-y-1/2
-               bg-black/40 hover:bg-black/50 text-white rounded-full p-3 text-4xl"
-        aria-label="Imagen anterior"
-      >&#8592;</button>
+    <button
+  (click)="prevImage()"
+  class="absolute left-4 top-1/2 -translate-y-1/2
+         text-white text-4xl p-0 leading-none focus:outline-none"
+  aria-label="Imagen anterior"
+>&#8592;</button>
 
-      <!-- Flecha derecha -->
-      <button
-        (click)="nextImage()"
-        class="absolute right-4 top-1/2 -translate-y-1/2
-               bg-black/40 hover:bg-black/50 text-white rounded-full p-3 text-4xl"
-        aria-label="Imagen siguiente"
-      >&#8594;</button>
+<!-- Flecha derecha -->
+<button
+  (click)="nextImage()"
+  class="absolute right-4 top-1/2 -translate-y-1/2
+         text-white text-4xl p-0 leading-none focus:outline-none"
+  aria-label="Imagen siguiente"
+>&#8594;</button>
     </div>
 
     <div class="mt-4 text-gray-500">Imagen {{ currentImage }} de {{ totalImages }}</div>
