--- a/src/app/galeria/galeria.component.html
+++ b/src/app/galeria/galeria.component.html
@@ -30,6 +30,6 @@
 >&#8594;</button>
     </div>
 
-    <div class="mt-4 text-gray-500">Imagen {{ currentImage }} de {{ totalImages }}</div>
+<!-- <div class="mt-4 text-gray-500">Imagen {{ currentImage }} de {{ totalImages }}</div> -->
   </div>
 </section>
