--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
 <div class="page-wrapper min-h-screen flex flex-col overflow-x-hidden w-full">
 
   <!-- Navbar sticky arriba -->
-  <div class="sticky top-0 z-50 bg-black bg-opacity-80 text-white shadow w-full">
-    <app-navbar></app-navbar>
-  </div>
-
+<div class="fixed top-0 left-0 right-0 z-50 bg-black bg-opacity-80 text-white shadow w-full">
+  <app-navbar></app-navbar>
+</div>
   <main class="flex-grow w-full overflow-x-hidden">
 
 <section id="inicio"
@@ -27,7 +26,7 @@
 </section>
 
 
-  <section id="detalles" class="py-12 px-6 text-gray-900 bg-sky-50 overflow-x-hidden w-full">
+  <section id="detalles" class="py-12 px-6 text-gray-900 bg-sky-50 overflow-x-hidden w-full ">
       <div class="max-w-3xl mx-auto">
         <h2 class="text-4xl font-semibold text-center mb-12">Detalles del Evento</h2>
         <div class="relative border-l-4 border-gray-700 pl-6">
@@ -47,7 +46,7 @@
       </div>
     </section>
 
-    <section id="galeria" class="bg-gray-100 py-12 px-6 text-gray-900 overflow-x-hidden w-full">
+    <section id="galeria" class="bg-sky-50 py-12 px-6 text-gray-900 overflow-x-hidden w-full">
       <div class="max-w-5xl mx-auto text-center mb-8">
         <h2 class="text-4xl font-semibold">Galería</h2>
 
