--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,42 +2,47 @@
 
   <!-- Navbar sticky arriba -->
 <div class="fixed top-0 left-0 right-0 z-50 bg-black bg-opacity-80 text-white shadow w-full">
-  <app-navbar></app-navbar>
+  <div class="max-w-7xl mx-auto px-10">
+    <app-navbar></app-navbar>
+  </div>
 </div>
   <main class="flex-grow w-full overflow-x-hidden">
 
-<section id="inicio"
-  class="relative min-h-screen w-full bg-center bg-no-repeat bg-fixed text-center text-white overflow-hidden"
-  style="background-image: url('/boda3.jpg'); background-size: cover;">
-  
-  <div class="absolute inset-0 bg-black/40 flex flex-col p-6 md:p-12">
-    <div class="flex-grow flex flex-col justify-start pt-12 md:pt-24 items-center text-white text-center">
-      <h1 class="text-5xl md:text-7xl font-normal tracking-wide" style="font-family: 'Playfair Display', serif;">
-        Raquel y Jose
-      </h1>
-      <h2 class="text-3xl md:text-5xl font-normal tracking-wide mt-2" style="font-family: 'Playfair Display', serif;">
-        01/11/2025
-      </h2>
-      <div class="mt-4">
-        <app-countdown></app-countdown>
+    <section id="inicio"
+      class="relative min-h-screen w-full bg-center bg-no-repeat bg-fixed text-center text-white overflow-hidden"
+      style="background-image: url('/boda3.jpg'); background-size: cover;">
+
+      <div class="absolute inset-0 bg-black/40 flex flex-col p-6 md:p-12">
+        <div class="flex-grow flex flex-col justify-start pt-12 md:pt-24 items-center text-white text-center">
+          <h1 class="text-5xl md:text-7xl font-normal tracking-wide" style="font-family: 'Playfair Display', serif;">
+            Raquel y Jose
+          </h1>
+          <h2 class="text-3xl md:text-5xl font-normal tracking-wide mt-2"
+            style="font-family: 'Playfair Display', serif;">
+            01/11/2025
+          </h2>
+          <div class="mt-4">
+            <app-countdown></app-countdown>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</section>
+    </section>
 
 
-  <section id="detalles" class="py-12 px-6 text-gray-900 bg-sky-50 overflow-x-hidden w-full ">
+    <section id="detalles" class="py-12 px-6 text-gray-900 bg-sky-50 overflow-x-hidden w-full ">
       <div class="max-w-3xl mx-auto">
         <h2 class="text-4xl font-semibold text-center mb-12">Detalles del Evento</h2>
         <div class="relative border-l-4 border-gray-700 pl-6">
           <div *ngFor="let item of timeline; let i = index" class="mb-10 group relative flex items-start space-x-3">
-            <div class="absolute -left-[1.1rem] top-1.5 w-5 h-5 rounded-full bg-gray-900 border-4 border-white shadow-lg group-hover:scale-110 transition-transform duration-300"></div>
+            <div
+              class="absolute -left-[1.1rem] top-1.5 w-5 h-5 rounded-full bg-gray-900 border-4 border-white shadow-lg group-hover:scale-110 transition-transform duration-300">
+            </div>
 
             <div class="flex-shrink-0 mt-1 w-6 h-6 text-gray-900" [innerHTML]="item.icon"></div>
 
             <div class="bg-gray-100 p-4 rounded-lg shadow-md hover:shadow-lg transition duration-300 flex-1">
               <h3 class="text-xl font-semibold text-gray-900 flex items-center space-x-2">
-                <span>{{ item.hora }}</span>  <span>{{ item.titulo }}</span>
+                <span>{{ item.hora }}</span> <span>{{ item.titulo }}</span>
               </h3>
               <p class="mt-1 text-gray-700">{{ item.descripcion }}</p>
             </div>
@@ -61,21 +66,13 @@
         <h2 class="text-4xl font-semibold mb-10 text-center">Preguntas Frecuentes (FAQ)</h2>
 
         <div *ngFor="let item of faqItems; let i = index" class="border-b border-gray-300 py-4">
-          <button
-            class="flex items-center justify-between w-full text-left focus:outline-none"
-            (click)="toggle(i)"
-          >
+          <button class="flex items-center justify-between w-full text-left focus:outline-none" (click)="toggle(i)">
             <div class="flex items-center space-x-4">
               <span [innerHTML]="item.icon" class="w-8 h-8 text-black flex-shrink-0"></span>
               <span class="font-semibold text-lg">{{ item.question }}</span>
             </div>
-            <svg
-              [class.rotate-180]="openedIndex === i"
-              class="w-5 h-5 text-black transition-transform duration-300"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none" viewBox="0 0 24 24"
-              stroke="currentColor" stroke-width="2"
-            >
+            <svg [class.rotate-180]="openedIndex === i" class="w-5 h-5 text-black transition-transform duration-300"
+              xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
               <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
             </svg>
           </button>
@@ -85,6 +82,14 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <section class="w-full bg-sky-50 py-12 px-6 flex justify-center">
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfGDJCnZ5xwrW7zxpKDtOAKu2Y175nUkS9M6qXR98O_mCpJlg/viewform?usp=sharing&ouid=103457335119933057856"
+        target="_blank" rel="noopener noreferrer"
+        class="inline-block bg-black text-white text-lg font-semibold px-8 py-4 rounded-full shadow-lg hover:bg-gray-800 transition-colors duration-300">
+        Confirmar Asistencia
+      </a>
     </section>
 
   </main>
